# yolo_object_detection

./: CMakeLists.txt  README.md  package.xml
conf/: yolov4-tiny-bdd100k.cfg
darknet/: Makefile
include/yolo_object_detection/: yolo_object_detection_node.hpp
launch/: aes.launch  yolo_object_detection.launch
src/: main.cpp  yolo_object_detection_node.cpp
